# cube_wgpu

./: Cargo.toml  README.md  package-lock.json  package.json
cube_in_browser/: package-lock.json  package.json  vite.config.ts
cube_in_browser/src/: App.tsx  Card.css  app.ts  index.tsx  main.ts  style.css
cube_in_browser/src/components/: CubeRender.tsx  cube_render.ts
src/: camera.rs  lib.rs  main.rs  shape_helpers.rs  state.rs  wasm_driver.rs  wgpu_helpers.rs
src/shaders/: shader.wgsl
