[package]
name = "cube_take_two"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version = "0.29", features = ["rwh_05", "wayland"] }
bytemuck = {version="1.13.1", features = ["derive"]}
cgmath = "*"
cfg-if="1.0.0"
pollster = "*"
env_logger = "0.10"
wgpu = "24.0"
line_drawing = "1.0.0"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Gpu",
    "HtmlElement",
    "Performance",
    "HtmlCanvasElement"
]}
wasm-bindgen-futures = "0.4.37"